tests/negative/semantic/for_in_type_mismatch/input.ci
void main() {
    string[] words = ["a", "b"];
    for (int x in words) {
        print(x + "\n");
    }
}
